<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">岁岁屏安</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_text">岁岁屏安</string>
    <string name="welcome_text01">这是介绍1</string>
    <string name="welcome_text02">\n介绍2\n这是介绍2</string>
    <string name="welcome_text03">这是介绍3</string>
    <string name="welcome_text04">这是介绍4</string>
    <string name="welcome_btn_text">开始进入</string>
    <string name="spb_xieyi">岁岁屏安用户协议</string>
    <string name="my_yes">确定</string>
    <string name="my_no">取消</string>
    <string name="my_exit">退出</string>
    <string name="_regist">登录注册</string>
    <string name="_login">登录</string>
    <string name="_login_yes">登录vip</string>
    <string name="_claim">申请服务</string>
    <string name="_nologin_vip">未登录vip</string>
    <string name="_login_novip">登录novip</string>
    <string name="_login_vip_self">登录vipself</string>
    <string name="_regist_phone">手机号码</string>
    <string name="_regist_name">姓名</string>
    <string name="URL">http://cs.youmsj.cn</string>
    <string name="main_title_string">岁岁屏安——中国手机修屏领导品牌</string>
    <string name="ali_Ensure">"确定"</string>
    <string name="ali_Cancel">"取消"</string>
    <string name="ali_remote_call_failed">Failure calling remote service</string>
    <string name="ali_confirm_install_hint">"安装提示"</string>
    <string name="ali_confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
    <string name="title_string_one">岁　 岁　屏　安</string>
    <string name="title_string_two">中国手机修屏领导品牌</string>
    <string name="phone_imei_text">本手机串号</string>
    <string name="phone_spinner_canbao_text">已参保手机</string>
    <string name="phone_spinner_fuwu_text">屏保服务项</string>
    <string name="phone_spinner_cheack_text">请选择分类</string>
    <string name="login_yes_otime">剩余购机款</string>
    <string name="login_yes_starttime">屏保开始日期</string>
    <string name="login_yes_outtime">屏保截止日期</string>
    <string name="login_btn_iwant_claim">我要修屏</string>
    <string name="login_btn_goto_shop">商城</string>
    <string name="login_btn_xubao">续保</string>
    <string name="login_btn_canbaobenji">参保本机</string>
    <string name="login_btn_fuwujieshao">服务介绍</string>
    <string name="login_btn_lijicanbao">立即参保</string>
    <string name="nologin_btn_canbao">积分兑换</string>
    <string name="nologin_btn_canbaobenji">参保本机</string>
    <string name="nologin_btn_woyaofuwu">我要修屏</string>
    <string name="nologin_btn_login">登录</string>
    <string name="nologin_btn_fuwu">服务</string>
    <string name="regist_text_shuruphone">请输入您的手机号</string>
    <string name="regist_text_shuruname">请输入您的姓名</string>
    <string name="regist_btn_login">登录</string>
    <string name="regist_btn_retrun">返回</string>
    <string name="pay_text_name">商品项目:</string>
    <string name="pay_text_price">项目价格:</string>
    <string name="pay_text_imei">参保串号:</string>
    <string name="pay_text_select">选择参保方式</string>
    <string name="pay_btn_cancel">取消</string>
    <string name="pay_btn_pay">确认</string>
    <string name="pay_edit_shuru">请输入充值卡密码</string>
    <string name="paylist_yinlian">支持储蓄卡信用卡，无需开通网银</string>
    <string name="paylist_ali">推荐有支付宝账号的用户使用</string>
    <string name="paylist_card">官方发行的卡密参保</string>
    <string name="paylist_mobile">7元/月，协议期12个月，协议期内不能退订</string>
    <string name="claim_text_phone">客服热线:</string>
    <string name="claim_text_wenti">问题</string>
    <string name="claim_text_tel">4000820136</string>
    <string name="claim_text_time">时间:周一至周日08:00至20:00</string>
    <string name="claim_edit_miaosu">(必填)请输入故障描述\n\n\n温馨提示：\n1、请确定您修屏的手机串码与参保时登记的手机串码一致；\n2、手机已拆过,不在维保范围,请保持手机为原装；\n3、手机主板损坏、不能正常开机，不在维保范围。</string>
    <string name="claim_text_lianxifangshi">您的联系方式</string>
    <string name="claim_edit_lianxifangshi">请输入手机或电话号码</string>
    <string name="claim_text_dizhi">您的详细地址</string>
    <string name="claim_edit_dizhi">请输入您的详细地址</string>
    <string name="claim_text_xieyi">《岁岁屏安用户协议》</string>
    <string name="claim_btn_cancel">返回</string>
    <string name="claim_btn_send">发送</string>
    <string name="web_btn_ok">我同意</string>
    <string name="login_text_xieyi">我已阅读《岁岁屏安用户协议》</string>
    <string name="login_text_yicanbao">本机已参保</string>
    <string name="login_text_weicanbao">业务审核中</string>
    <string name="share_btn_share">发送邀请短信</string>
    <string name="share_text_sharedes">下载岁岁屏安</string>
    <string name="share_text_sharedes1">关注岁岁屏安微信公众号</string>
    <string name="post_ERROR">网络连接出错，请重试</string>
    <string name="pay_mobile_tip">是否确认办理话费代付?</string>
    <string name="pay_mobile_info">协议期12个月，每月7元，手机话费代扣。\n协议期内手机屏幕可享受免费维保服务一次。</string>

</resources>